--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "PT Sans";
   src:
-    url("PTSans-Regular.woff2") format("woff2"),
-    url("PTSans-Regular.woff") format("woff");
+    url("../fonts/PTSans-Regular.woff2") format("woff2"),
+    url("../fonts/PTSans-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   font-family: "PT Sans";
   src:
-    url("PTSans-Bold.woff2") format("woff2"),
-    url("PTSans-Bold.woff") format("woff");
+    url("../fonts/PTSans-Bold.woff2") format("woff2"),
+    url("../fonts/PTSans-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   font-family: "PT Sans Narrow";
   src:
-    url("PTSans-Narrow.woff2") format("woff2"),
-    url("PTSans-Narrow.woff") format("woff");
+    url("../fonts/PTSans-Narrow.woff2") format("woff2"),
+    url("../fonts/PTSans-Narrow.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 @font-face {
   font-family: "PT Sans Narrow";
   src:
-    url("PTSans-NarrowBold.woff2") format("woff2"),
-    url("PTSans-NarrowBold.woff") format("woff");
+    url("../fonts/PTSans-NarrowBold.woff2") format("woff2"),
+    url("../fonts/PTSans-NarrowBold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
